# remove-left-recursion

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  grammar.cpp  grammar.hpp  grammar_transform.hpp  main.cpp  test.sh
src/: grammar.cpp  grammar.hpp  grammar_transform.cpp  grammar_transform.hpp  main.cpp  strong_types.hpp
tests/: cycle.txt  epsilon.txt  example_grammar.txt  multchar.txt
tests/outputs/: cycle.txt  epsilon.txt  example_grammar.txt  multchar.txt  multichar.txt  outputs
tools/: build.sh  test.sh
